디렉토리 변경

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "python",
             "request": "launch",
             "module": "streamlit",
-            "args": ["run", "streamlit_app.py"],
+            "args": ["run", "index.py"],
             "justMyCode": true,
         }
     ]
