--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "module": "streamlit",
             "args": ["run", "index.py"],
             "justMyCode": true,
+            "preLaunchTask": "uvicorn-api",
         }
     ]
 }
